update: fonts added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<title>Starter Pack</title>
 		<!-- Favicon -->
 		<!-- <link rel="icon" type="image/png" sizes="16x16" href=""> -->
+		<!-- Fonts  -->
+		<link rel="stylesheet" href="assets/fonts/fonts.css" />
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 		<!-- Main css -->
@@ -16,6 +18,9 @@
 	<body>
 		<!-- ?? section start  -->
 
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ratione est, ipsa
+		earum cum cumque autem quae fugiat obcaecati porro placeat, illum sit suscipit.
+		Iusto obcaecati fuga odio quod optio.
 		<!-- ?? section end  -->
 
 		<!-- All js Goes here -->
