update: ig created

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="assets/fonts/fonts.css" />
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
 		<!-- Main css -->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/main.css.map" />
@@ -104,6 +105,45 @@
 
 		<!-- ?? section start  -->
 		<!-- ?? section end  -->
+
+		<!-- instagram section start  -->
+		<section class="instagram">
+			<div class="container">
+				<div class="heading">
+					<h2>#follow us in instagram</h2>
+					<p>@yourinstagramofficial</p>
+				</div>
+			</div>
+			<div class="swiper post-slider">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<div class="ig-card">
+							<img src="assets/images/posts/1.png" alt="post" />
+							<a href="#">
+								<img src="assets/images/icons/ig.svg" alt="icon" />
+							</a>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="ig-card">
+							<img src="assets/images/posts/2.png" alt="post" />
+							<a href="#">
+								<img src="assets/images/icons/ig.svg" alt="icon" />
+							</a>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="ig-card">
+							<img src="assets/images/posts/3.png" alt="post" />
+							<a href="#">
+								<img src="assets/images/icons/ig.svg" alt="icon" />
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- instagram section end  -->
 
 		<!-- footer section start  -->
 
@@ -272,8 +312,8 @@
 
 		<!-- All js Goes here -->
 		<script src="assets/js/jquery-3.6.0.min.js"></script>
-		<!-- <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script> -->
 		<script src="assets/js/bootstrap.bundle.min.js"></script>
+		<script src="assets/js/swiper-bundle.min.js"></script>
 		<script src="assets/js/app.js"></script>
 	</body>
 </html>
