--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<body>
 		<!-- header section start  -->
-		<header class="header">
+		<header class="header d-none">
 			<nav class="navbar navbar-expand-lg">
 				<div class="container">
 					<a class="navbar-brand" href="#">
@@ -106,6 +106,303 @@
 		<!-- ?? section start  -->
 		<!-- ?? section end  -->
 
+		<!-- product section start  -->
+		<section class="product">
+			<div class="container">
+				<div class="heading">
+					<h2>Our Products</h2>
+					<p>
+						Lorem Ipsum is simply dummy text of the printing and typesetting
+						industry. Lorem Ipsum has been the industry's standard dummy text
+						ever since the 1500s,
+					</p>
+				</div>
+
+				<div class="row product-content">
+					<div class="col-lg-6">
+						<div class="product-img">
+							<img src="assets/images/products/1.png" alt="product" />
+						</div>
+					</div>
+					<div class="col-lg-5">
+						<div class="product-info">
+							<h2>Product a</h2>
+							<p>
+								Lorem Ipsum is simply dummy text of the printing and
+								typesetting industry. Lorem Ipsum has been the industry's
+								standard dummy text ever since the 1500s,
+							</p>
+
+							<ul>
+								<li>
+									<span>
+										<img
+											src="assets/images/icons/check.svg"
+											alt="icon"
+										/>
+									</span>
+
+									<p>Telling about feature</p>
+								</li>
+								<li>
+									<span>
+										<img
+											src="assets/images/icons/check.svg"
+											alt="icon"
+										/>
+									</span>
+
+									<p>Telling about feature</p>
+								</li>
+								<li>
+									<span>
+										<img
+											src="assets/images/icons/check.svg"
+											alt="icon"
+										/>
+									</span>
+
+									<p>Telling about feature</p>
+								</li>
+								<li>
+									<span>
+										<img
+											src="assets/images/icons/check.svg"
+											alt="icon"
+										/>
+									</span>
+
+									<p>Telling about feature</p>
+								</li>
+							</ul>
+
+							<a href="#" class="button">Shop now !</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="row product-content">
+					<div class="col-lg-6 order-2 order-lg-0">
+						<div class="product-info">
+							<h2>Product a</h2>
+							<p>
+								Lorem Ipsum is simply dummy text of the printing and
+								typesetting industry. Lorem Ipsum has been the industry's
+								standard dummy text ever since the 1500s,
+							</p>
+
+							<ul>
+								<li>
+									<span>
+										<img
+											src="assets/images/icons/check.svg"
+											alt="icon"
+										/>
+									</span>
+
+									<p>Telling about feature</p>
+								</li>
+								<li>
+									<span>
+										<img
+											src="assets/images/icons/check.svg"
+											alt="icon"
+										/>
+									</span>
+
+									<p>Telling about feature</p>
+								</li>
+								<li>
+									<span>
+										<img
+											src="assets/images/icons/check.svg"
+											alt="icon"
+										/>
+									</span>
+
+									<p>Telling about feature</p>
+								</li>
+								<li>
+									<span>
+										<img
+											src="assets/images/icons/check.svg"
+											alt="icon"
+										/>
+									</span>
+
+									<p>Telling about feature</p>
+								</li>
+							</ul>
+
+							<a href="#" class="button">Shop now !</a>
+						</div>
+					</div>
+					<div class="col-lg-6 order-1 order-lg-0">
+						<div class="product-img">
+							<img src="assets/images/products/2.png" alt="product" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- product section end  -->
+
+		<!-- choose-us section start  -->
+		<section class="choose">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6 order-2 order-lg-0">
+						<div class="choose-info">
+							<div class="heading">
+								<h2>why you should choose us !</h2>
+								<p>
+									Lorem Ipsum is simply dummy text of the printing and
+									typesetting industry. Lorem Ipsum has been the
+									industry's standard dummy text ever since the 1500s,
+								</p>
+							</div>
+
+							<ul>
+								<li>
+									<h2>Lorem Ipsum 1</h2>
+									<p>
+										Lorem Ipsum is simply dummy text of the printing
+										and typesetting industry. Lorem Ipsum has been the
+										industry's standard dummy text ever since the
+										1500s,
+									</p>
+								</li>
+								<li>
+									<h2>Lorem Ipsum 2</h2>
+									<p>
+										Lorem Ipsum is simply dummy text of the printing
+										and typesetting industry. Lorem Ipsum has been the
+										industry's standard dummy text ever since the
+										1500s,
+									</p>
+								</li>
+								<li>
+									<h2>Lorem Ipsum 3</h2>
+									<p>
+										Lorem Ipsum is simply dummy text of the printing
+										and typesetting industry. Lorem Ipsum has been the
+										industry's standard dummy text ever since the
+										1500s,
+									</p>
+								</li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="col-lg-6 order-1 order-lg-0">
+						<div class="choose-img">
+							<img src="assets/images/bg/2.png" alt="" />
+							<div class="choose-img__info">
+								<h2>See our story</h2>
+								<a href="#">
+									<img src="assets/images/icons/play.svg" alt="" />
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- choose-us section end  -->
+
+		<!-- testimonial  section start  -->
+
+		<section class="testimonial">
+			<div class="container">
+				<div class="testimonial-card">
+					<div class="quote">
+						<img src="assets/images/icons/quote.png" alt="" />
+					</div>
+					<div
+						class="info"
+						style="
+							background: url('./assets/images/bg/1.png') center
+								center/cover no-repeat;
+						"
+					>
+						<div class="swiper testomonial-slider">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<div class="testimonial-content">
+										<blockquote>
+											<p>
+												“ Lorem Ipsum is simply dummy text of the
+												printing and typesetting industry. Lorem
+												Ipsum has been the industry's standard
+												dummy text ever since the 1500s “
+											</p>
+										</blockquote>
+
+										<div class="user">
+											<div class="img">
+												<img
+													src="assets/images/users/1.png"
+													alt="icon"
+												/>
+											</div>
+											<h2>Name text in here</h2>
+										</div>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="testimonial-content">
+										<blockquote>
+											<p>
+												“ Lorem Ipsum is simply dummy text of the
+												printing and typesetting industry. Lorem
+												Ipsum has been the industry's standard
+												dummy text ever since the 1500s “
+											</p>
+										</blockquote>
+
+										<div class="user">
+											<div class="img">
+												<img
+													src="assets/images/users/1.png"
+													alt="icon"
+												/>
+											</div>
+											<h2>Name text in here</h2>
+										</div>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="testimonial-content">
+										<blockquote>
+											<p>
+												“ Lorem Ipsum is simply dummy text of the
+												printing and typesetting industry. Lorem
+												Ipsum has been the industry's standard
+												dummy text ever since the 1500s “
+											</p>
+										</blockquote>
+
+										<div class="user">
+											<div class="img">
+												<img
+													src="assets/images/users/1.png"
+													alt="icon"
+												/>
+											</div>
+											<h2>Name text in here</h2>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-pagination"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- testimonial  section end  -->
+
 		<!-- instagram section start  -->
 		<section class="instagram">
 			<div class="container">
@@ -127,6 +424,14 @@
 					<div class="swiper-slide">
 						<div class="ig-card">
 							<img src="assets/images/posts/2.png" alt="post" />
+							<a href="#">
+								<img src="assets/images/icons/ig.svg" alt="icon" />
+							</a>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="ig-card">
+							<img src="assets/images/posts/3.png" alt="post" />
 							<a href="#">
 								<img src="assets/images/icons/ig.svg" alt="icon" />
 							</a>
