--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<body>
 		<!-- header section start  -->
-		<header class="header d-none">
+		<header class="header  ">
 			<nav class="navbar navbar-expand-lg">
 				<div class="container">
 					<a class="navbar-brand" href="#">
@@ -102,6 +102,51 @@
 			</nav>
 		</header>
 		<!-- header section end  -->
+
+		<!-- banner section start  -->
+
+
+		<section class="banner">
+			<div class="banner-content">
+				<div class="container">
+					<div class="banner-info row">
+							<div class=" offset-lg-7  col-lg-5">
+								<h2>
+								yOUR tAGLINE IN HERE!
+								</h2>
+
+								<p>
+								Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+								</p>
+
+								<a href="#" class="button">SHOP NOW !</a>
+
+							</div>
+					</div>
+
+
+				
+					<div class="banner-overlay">
+						<img src="assets/images/bg/truck.png" alt="">
+					</div>
+				</div>
+
+			</div>
+			<div class="banner-content-bottom">
+				<div class="container">
+                     <div class="banner-content-bottom__info">
+						<h2>
+							text selling point in here
+						</h2>
+						<p>
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+						</p>
+					 </div>
+				</div>
+			</div>
+		</section>
+
+		<!-- banner section end  -->
 
 		<!-- ?? section start  -->
 		<!-- ?? section end  -->
