update: details page created

--- a/details.html
+++ b/details.html
@@ -103,252 +103,181 @@
 		</header>
 		<!-- header section end  -->
 
-		<!-- banner section start  -->
-
-		<section class="banner">
-			<div class="banner-content">
-				<div class="container">
-					<div class="banner-info row">
-						<div class="offset-lg-7 col-lg-5">
-							<h2>yOUR tAGLINE IN HERE!</h2>
-
-							<p>
-								Lorem Ipsum is simply dummy text of the printing and
-								typesetting industry. Lorem Ipsum has been the industry's
-								standard dummy text ever since the 1500s,
-							</p>
-
-							<a href="#" class="button">SHOP NOW !</a>
-						</div>
-					</div>
-
-					<div class="banner-overlay">
-						<img src="assets/images/bg/truck.png" alt="" />
-					</div>
-				</div>
-			</div>
-			<div class="banner-content-bottom">
-				<div class="container">
-					<div class="banner-content-bottom__info">
-						<h2>text selling point in here</h2>
-						<p>
-							Lorem Ipsum is simply dummy text of the printing and
-							typesetting industry. Lorem Ipsum has been the industry's
-							standard dummy text ever since the 1500s,
-						</p>
-					</div>
+		<!-- breadcrumb section start  -->
+		<section class="breadcrumb">
+			<div class="container">
+				<div class="breadcrumb-content">
+					<h2>Our Products</h2>
 				</div>
 			</div>
 		</section>
+		<!-- breadcrumb section end  -->
 
-		<!-- banner section end  -->
+		<!-- products section start  -->
 
-		<!-- ?? section start  -->
-		<!-- ?? section end  -->
-
-		<!-- product section start  -->
-		<section class="product">
+		<section class="products">
 			<div class="container">
-				<div class="heading">
-					<h2>Our Products</h2>
+				<div class="row products-content">
+					<div class="col-xl-3 order-2 order-xl-0">
+						<ul class="products-info">
+							<li>
+								<span>Brand</span>
+								<h6>The Brand Name</h6>
+							</li>
+							<li>
+								<span>Status</span>
+								<h6>New Products</h6>
+							</li>
+							<li>
+								<span>Type </span>
+								<h6>The Type</h6>
+							</li>
+							<li>
+								<span>Available</span>
+								<h6>Always Ready</h6>
+							</li>
+						</ul>
+					</div>
+					<div class="col-xl-6 order-1 order-xl-0">
+						<div class="swiper products-slider">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<img src="assets/images/products/4.png" alt="" />
+								</div>
+								<div class="swiper-slide">
+									<img src="assets/images/products/5.png" alt="" />
+								</div>
+								<div class="swiper-slide">
+									<img src="assets/images/products/6.png" alt="" />
+								</div>
+								<div class="swiper-slide">
+									<img src="assets/images/products/7.png" alt="" />
+								</div>
+							</div>
+						</div>
+						<div thumbsSlider="" class="swiper products-thumb-slider">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<img src="assets/images/products/4.png" alt="" />
+								</div>
+								<div class="swiper-slide">
+									<img src="assets/images/products/5.png" alt="" />
+								</div>
+								<div class="swiper-slide">
+									<img src="assets/images/products/6.png" alt="" />
+								</div>
+								<div class="swiper-slide">
+									<img src="assets/images/products/7.png" alt="" />
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xl-3 order-3 order-xl-0">
+						<div class="product-card">
+							<span>Product</span>
+							<h2>The Product Name</h2>
+							<p>
+								Lorem Ipsum is simply dummy text of the printing and
+								typesetting industry.
+							</p>
+							<div class="product-card-price">
+								<span>Price</span>
+								<h2>100$</h2>
+							</div>
+
+							<div class="product-card-actions">
+								<a href="#"> Buy now</a>
+								<a href="#">
+									<span>
+										<svg
+											width="20"
+											height="20"
+											viewBox="0 0 20 20"
+											fill="none"
+											xmlns="http://www.w3.org/2000/svg"
+										>
+											<path
+												d="M1 1H3L3.4 3M3.4 3H19L15 11H5M3.4 3L5 11M5 11L2.707 13.293C2.077 13.923 2.523 15 3.414 15H15M15 15C14.4696 15 13.9609 15.2107 13.5858 15.5858C13.2107 15.9609 13 16.4696 13 17C13 17.5304 13.2107 18.0391 13.5858 18.4142C13.9609 18.7893 14.4696 19 15 19C15.5304 19 16.0391 18.7893 16.4142 18.4142C16.7893 18.0391 17 17.5304 17 17C17 16.4696 16.7893 15.9609 16.4142 15.5858C16.0391 15.2107 15.5304 15 15 15ZM7 17C7 17.5304 6.78929 18.0391 6.41421 18.4142C6.03914 18.7893 5.53043 19 5 19C4.46957 19 3.96086 18.7893 3.58579 18.4142C3.21071 18.0391 3 17.5304 3 17C3 16.4696 3.21071 15.9609 3.58579 15.5858C3.96086 15.2107 4.46957 15 5 15C5.53043 15 6.03914 15.2107 6.41421 15.5858C6.78929 15.9609 7 16.4696 7 17Z"
+												stroke="currentColor"
+												stroke-width="2"
+												stroke-linecap="round"
+												stroke-linejoin="round"
+											/>
+										</svg>
+									</span>
+									Cart</a
+								>
+							</div>
+						</div>
+
+						<div class="store-card">
+							<div class="info">
+								<img
+									src="assets/images/icons/map-pin.svg"
+									alt="map-pin"
+								/>
+								<div class="info-details">
+									<h2>offline store</h2>
+									<p>Checkout out our products at a store near you.</p>
+								</div>
+							</div>
+							<a href="#">Check</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="products-details">
 					<p>
-						Lorem Ipsum is simply dummy text of the printing and typesetting
-						industry. Lorem Ipsum has been the industry's standard dummy text
-						ever since the 1500s,
+						High quality active carbon-fiber spoiler for your Arrma
+						Infraction, manufactured, assembled and quality checked per
+						customer to ensure satisfaction. You will need to supply your own
+						choice of servo. This kit only comes with with servo mount and
+						Y-split servo wire.
+					</p>
+
+					<p>
+						Active Carbon Fiber wing, deploys when used with appropriate servo
+						Wing is completely flat while accelerating and acts as air-break
+						when you break, increasing grip and stopping power. Designed and
+						assembled to highest quality, delivery and Quality Control may
+						take up-to 20days(we are working to improve this), when purchased
+						in UK.
+					</p>
+
+					<p>
+						Can be configured to work on separate channel so can be deployed
+						at will, Acting like DRS. We have tested this wing up-to 80Mph.
 					</p>
 				</div>
-
-				<div class="row product-content">
-					<div class="col-lg-6">
-						<div class="product-img">
-							<img src="assets/images/products/1.png" alt="product" />
-						</div>
-					</div>
-					<div class="col-lg-5">
-						<div class="product-info">
-							<h2>Product a</h2>
-							<p>
-								Lorem Ipsum is simply dummy text of the printing and
-								typesetting industry. Lorem Ipsum has been the industry's
-								standard dummy text ever since the 1500s,
-							</p>
-
-							<ul>
-								<li>
-									<span>
-										<img
-											src="assets/images/icons/check.svg"
-											alt="icon"
-										/>
-									</span>
-
-									<p>Telling about feature</p>
-								</li>
-								<li>
-									<span>
-										<img
-											src="assets/images/icons/check.svg"
-											alt="icon"
-										/>
-									</span>
-
-									<p>Telling about feature</p>
-								</li>
-								<li>
-									<span>
-										<img
-											src="assets/images/icons/check.svg"
-											alt="icon"
-										/>
-									</span>
-
-									<p>Telling about feature</p>
-								</li>
-								<li>
-									<span>
-										<img
-											src="assets/images/icons/check.svg"
-											alt="icon"
-										/>
-									</span>
-
-									<p>Telling about feature</p>
-								</li>
-							</ul>
-
-							<a href="#" class="button">Shop now !</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="row product-content">
-					<div class="col-lg-6 order-2 order-lg-0">
-						<div class="product-info">
-							<h2>Product a</h2>
-							<p>
-								Lorem Ipsum is simply dummy text of the printing and
-								typesetting industry. Lorem Ipsum has been the industry's
-								standard dummy text ever since the 1500s,
-							</p>
-
-							<ul>
-								<li>
-									<span>
-										<img
-											src="assets/images/icons/check.svg"
-											alt="icon"
-										/>
-									</span>
-
-									<p>Telling about feature</p>
-								</li>
-								<li>
-									<span>
-										<img
-											src="assets/images/icons/check.svg"
-											alt="icon"
-										/>
-									</span>
-
-									<p>Telling about feature</p>
-								</li>
-								<li>
-									<span>
-										<img
-											src="assets/images/icons/check.svg"
-											alt="icon"
-										/>
-									</span>
-
-									<p>Telling about feature</p>
-								</li>
-								<li>
-									<span>
-										<img
-											src="assets/images/icons/check.svg"
-											alt="icon"
-										/>
-									</span>
-
-									<p>Telling about feature</p>
-								</li>
-							</ul>
-
-							<a href="#" class="button">Shop now !</a>
-						</div>
-					</div>
-					<div class="col-lg-6 order-1 order-lg-0">
-						<div class="product-img">
-							<img src="assets/images/products/2.png" alt="product" />
-						</div>
-					</div>
-				</div>
 			</div>
 		</section>
-		<!-- product section end  -->
+		<!-- products section end  -->
 
-		<!-- choose-us section start  -->
-		<section class="choose">
+		<!-- preview section start  -->
+		<section class="preview">
 			<div class="container">
-				<div class="row">
-					<div class="col-lg-6 order-2 order-lg-0">
-						<div class="choose-info">
-							<div class="heading">
-								<h2>why you should choose us !</h2>
-								<p>
-									Lorem Ipsum is simply dummy text of the printing and
-									typesetting industry. Lorem Ipsum has been the
-									industry's standard dummy text ever since the 1500s,
-								</p>
-							</div>
+				<h2 class="heading">Preview</h2>
 
-							<ul>
-								<li>
-									<h2>Lorem Ipsum 1</h2>
-									<p>
-										Lorem Ipsum is simply dummy text of the printing
-										and typesetting industry. Lorem Ipsum has been the
-										industry's standard dummy text ever since the
-										1500s,
-									</p>
-								</li>
-								<li>
-									<h2>Lorem Ipsum 2</h2>
-									<p>
-										Lorem Ipsum is simply dummy text of the printing
-										and typesetting industry. Lorem Ipsum has been the
-										industry's standard dummy text ever since the
-										1500s,
-									</p>
-								</li>
-								<li>
-									<h2>Lorem Ipsum 3</h2>
-									<p>
-										Lorem Ipsum is simply dummy text of the printing
-										and typesetting industry. Lorem Ipsum has been the
-										industry's standard dummy text ever since the
-										1500s,
-									</p>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="col-lg-6 order-1 order-lg-0">
-						<div class="choose-img">
-							<img src="assets/images/bg/2.png" alt="" />
-							<div class="choose-img__info">
-								<h2>See our story</h2>
-								<a href="#">
-									<img src="assets/images/icons/play.svg" alt="" />
-								</a>
-							</div>
-						</div>
-					</div>
+				<div class="preview-content">
+					<a href="#" class="preview-item">
+						<img src="assets/images/products/3.png" alt="" />
+					</a>
+					<a href="#" class="preview-item">
+						<img src="assets/images/products/3.png" alt="" />
+					</a>
+					<a href="#" class="preview-item">
+						<img src="assets/images/products/3.png" alt="" />
+					</a>
+					<a href="#" class="preview-item">
+						<img src="assets/images/products/3.png" alt="" />
+					</a>
+					<a href="#" class="preview-item">
+						<img src="assets/images/products/3.png" alt="" />
+					</a>
 				</div>
 			</div>
 		</section>
-		<!-- choose-us section end  -->
+		<!-- preview section end  -->
 
 		<!-- testimonial  section start  -->
 
@@ -437,6 +366,10 @@
 							<div class="swiper-pagination"></div>
 						</div>
 					</div>
+				</div>
+
+				<div class="testimonial-action">
+					<a href="#" class="button">Create a Review</a>
 				</div>
 			</div>
 		</section>
