--- a/status.html
+++ b/status.html
@@ -42,7 +42,7 @@
 						id="navbarSupportedContent"
 					>
 						<ul class="navbar-nav">
-							<li class="nav-item dropdown">
+							<li class="nav-item active dropdown">
 								<a
 									class="nav-link dropdown-toggle"
 									href="#"
@@ -190,9 +190,35 @@
 								aria-valuenow="70"
 								aria-valuemin="0"
 								aria-valuemax="100"
-								style="width: 100%"
-							>
-								<!-- <span class="sr-only">70% Complete</span> -->
+								style="width: 75%"
+							></div>
+
+							<div class="progress-status">
+								<div class="info active">
+									<span>1s jan 2022</span>
+									<div class="info-box"></div>
+									<h2>Order</h2>
+								</div>
+								<div class="info active">
+									<span>2nd jan 2022</span>
+									<div class="info-box"></div>
+									<h2>Custom Prosesing</h2>
+								</div>
+								<div class="info active">
+									<span>6th jan 2022</span>
+									<div class="info-box"></div>
+									<h2>sent</h2>
+								</div>
+								<div class="info active">
+									<span>8th jan 2022</span>
+									<div class="info-box"></div>
+									<h2>Courier</h2>
+								</div>
+								<div class="info">
+									<span>10th jan 2022</span>
+									<div class="info-box"></div>
+									<h2>Item Arrived</h2>
+								</div>
 							</div>
 						</div>
 					</div>
