--- a/status.html
+++ b/status.html
@@ -21,7 +21,7 @@
 		<header class="header">
 			<nav class="navbar navbar-expand-lg">
 				<div class="container">
-					<a class="navbar-brand" href="#">
+					<a class="navbar-brand" href="index.html">
 						<img src="assets/images/logo.png" alt="logo" class="img-fluid" />
 					</a>
 					<button
@@ -42,7 +42,7 @@
 						id="navbarSupportedContent"
 					>
 						<ul class="navbar-nav">
-							<li class="nav-item active dropdown">
+							<li class="nav-item dropdown">
 								<a
 									class="nav-link dropdown-toggle"
 									href="#"
@@ -58,21 +58,28 @@
 									aria-labelledby="navbarDropdown"
 								>
 									<li>
-										<a class="dropdown-item" href="#">Product A </a>
+										<a class="dropdown-item" href="details.html"
+											>Product A
+										</a>
 									</li>
 									<li>
-										<a class="dropdown-item" href="#">Product B </a>
+										<a class="dropdown-item" href="details.html"
+											>Product B
+										</a>
 									</li>
 									<!-- <li><hr class="dropdown-divider" /></li> -->
 								</ul>
 							</li>
 
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#"
+								<a
+									class="nav-link active"
+									aria-current="page"
+									href="about-us.html"
 									>About us</a
 								>
 							</li>
-							<li class="nav-item">
+							<li class="nav-item active">
 								<a class="nav-link" href="#">Order Status</a>
 							</li>
 
