update: text content fixed

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 				<div class="row product-content">
 					<div class="col-lg-6 order-2 order-lg-0">
 						<div class="product-info">
-							<h2>Product a</h2>
+							<h2>Product B</h2>
 							<p>
 								Lorem Ipsum is simply dummy text of the printing and
 								typesetting industry. Lorem Ipsum has been the industry's
