--- a/about-us.html
+++ b/about-us.html
@@ -122,76 +122,70 @@
 
 		<div class="about">
 			<div class="container">
+				<div class="about-info">
+					<h2>Telling about your company's</h2>
+					<div class="about-img">
+						<img src="assets/images/about.png" alt="icon" />
+					</div>
+					<blockquote>
+						<p>
+							Lorem Ipsum is simply dummy text of the printing and
+							typesetting industry. Lorem Ipsum has been the industry's
+							standard dummy text ever since the 1500s, when an unknown
+							printer took a galley of type and scrambled it to make a type
+							specimen book. It has survived not only five centuries, but
+							also the leap into electronic typesetting, remaining
+							essentially unchanged. It was popularised in the 1960s with
+							the release of Letraset sheets containing Lorem Ipsum
+							passages, and more recently with desktop publishing software
+							like Aldus PageMaker including versions of Lorem Ipsum
+						</p>
+						<p>
+							Lorem Ipsum is simply dummy text of the printing and
+							typesetting industry. Lorem Ipsum has been the industry's
+							standard dummy text ever since the 1500s, when an unknown
+							printer took a galley of type and scrambled it to make a type
+							specimen book. It has survived not only five centuries, but
+							also the leap into electronic typesetting, remaining
+							essentially unchanged. It was popularised in the 1960s with
+							the release of Letraset sheets containing Lorem Ipsum
+							passages, and more recently with desktop publishing software
+							like
+						</p>
+
+						<p>
+							Lorem Ipsum is simply dummy text of the printing and
+							typesetting industry. Lorem Ipsum has been the industry's
+							standard dummy text ever since the 1500s, when an unknown also
+							the leap into electronic typesetting, remaining specimen book.
+							It has survived not only five centuries, but printer took a
+							galley of type and scrambled it to make a type essentially
+							unchanged. Lorem ipsum dolor sit amet consectetur. Lorem,
+						</p>
+						<p>
+							Lorem Ipsum is simply dummy text of the printing and
+							typesetting industry. Lorem Ipsum has been the industry's
+							standard dummy text ever since the 1500s, when an unknown
+							printer took a galley of type and scrambled it to make a type
+							specimen book. It has survived not only five centuries, but
+							also the leap into electronic typesetting, remaining
+							essentially unchanged. It was popularised in the 1960s with
+							the release of Letraset sheets containing Lorem Ipsum
+							passages, and more recently with desktop publishing software
+							like Aldus PageMaker including versions of Lorem Ipsum
+						</p>
+					</blockquote>
+				</div>
+
 				<div class="row">
-					<div class="col-lg-4">
+					<!-- <div class="col-lg-4">
 						<div class="about-img">
 							<img src="assets/images/about.png" alt="" />
 						</div>
-					</div>
-					<div class="col-lg-8">
-						<div class="about-info">
-							<h2>Telling about your company's</h2>
-							<blockquote>
-								<p>
-									Lorem Ipsum is simply dummy text of the printing and
-									typesetting industry. Lorem Ipsum has been the
-									industry's standard dummy text ever since the 1500s,
-									when an unknown printer took a galley of type and
-									scrambled it to make a type specimen book. It has
-									survived not only five centuries, but also the leap
-									into electronic typesetting, remaining essentially
-									unchanged. It was popularised in the 1960s with the
-									release of Letraset sheets containing Lorem Ipsum
-									passages, and more recently with desktop publishing
-									software like Aldus PageMaker including versions of
-									Lorem Ipsum
-								</p>
-								<p>
-									Lorem Ipsum is simply dummy text of the printing and
-									typesetting industry. Lorem Ipsum has been the
-									industry's standard dummy text ever since the 1500s,
-									when an unknown printer took a galley of type and
-									scrambled it to make a type specimen book. It has
-									survived not only five centuries, but also the leap
-									into electronic typesetting, remaining essentially
-									unchanged. It was popularised in the 1960s with the
-									release of Letraset sheets containing Lorem Ipsum
-									passages, and more recently with desktop publishing
-									software like Aldus PageMaker including versions of
-									Lorem Ipsum
-								</p>
-							</blockquote>
-						</div>
-					</div>
+					</div> -->
+					<div class="col-lg-8"></div>
 					<div class="col-12">
-						<blockquote>
-							<p>
-								Lorem Ipsum is simply dummy text of the printing and
-								typesetting industry. Lorem Ipsum has been the industry's
-								standard dummy text ever since the 1500s, when an unknown
-								printer took a galley of type and scrambled it to make a
-								type specimen book. It has survived not only five
-								centuries, but also the leap into electronic typesetting,
-								remaining essentially unchanged. It was popularised in the
-								1960s with the release of Letraset sheets containing Lorem
-								Ipsum passages, and more recently with desktop publishing
-								software like Aldus PageMaker including versions of Lorem
-								Ipsum
-							</p>
-							<p>
-								Lorem Ipsum is simply dummy text of the printing and
-								typesetting industry. Lorem Ipsum has been the industry's
-								standard dummy text ever since the 1500s, when an unknown
-								printer took a galley of type and scrambled it to make a
-								type specimen book. It has survived not only five
-								centuries, but also the leap into electronic typesetting,
-								remaining essentially unchanged. It was popularised in the
-								1960s with the release of Letraset sheets containing Lorem
-								Ipsum passages, and more recently with desktop publishing
-								software like Aldus PageMaker including versions of Lorem
-								Ipsum
-							</p>
-						</blockquote>
+						<blockquote></blockquote>
 					</div>
 				</div>
 			</div>
