update: popup added

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 		<!-- <link rel="icon" type="image/png" sizes="16x16" href=""> -->
 		<!-- Fonts  -->
 		<link rel="stylesheet" href="assets/fonts/fonts.css" />
-		<!-- Bootstrap -->
+		<!-- Library -->
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
+		<link rel="stylesheet" href="assets/css/venobox.min.css" />
 		<!-- Main css -->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/main.css.map" />
@@ -346,7 +347,14 @@
 							<img src="assets/images/bg/2.png" alt="" />
 							<div class="choose-img__info">
 								<h2>See our story</h2>
-								<a href="#">
+								<a
+									class="my-video-links"
+									data-gall="gall-video"
+									data-ratio="4x3"
+									data-autoplay="true"
+									data-vbtype="video"
+									href="https://youtu.be/KLuT38m-anc"
+								>
 									<img src="assets/images/icons/play.svg" alt="" />
 								</a>
 							</div>
@@ -666,6 +674,9 @@
 		<script src="assets/js/jquery-3.6.0.min.js"></script>
 		<script src="assets/js/bootstrap.bundle.min.js"></script>
 		<script src="assets/js/swiper-bundle.min.js"></script>
+		<script src="assets/js/venobox.min.js"></script>
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.5.0-beta.5/lightgallery.min.js"></script>
+		<script src="https://cdn.skypack.dev/lightgallery@2.3.0-beta.4/plugins/video"></script> -->
 		<script src="assets/js/app.js"></script>
 	</body>
 </html>
